--- a/about.html
+++ b/about.html
@@ -2,34 +2,44 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-	<title>Andy Zhang | Portfolio</title>
-	<meta name"viewport" content="width=device-width, initial-scale=1" http-equiv="content-type" content="text/html; charset=utf-8" />
+	<title>Wenyu (Andy) Zhang | Portfolio</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1" http-equiv="content-type" content="text/html; charset=utf-8" />
     <link rel="shortcut icon" href="images/avatar.jpg" />
 	<link href="css/master.css" rel="stylesheet" type="text/css" />
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 
-	<img src="images/banner.png" class="banner"/>
+	<div class="banner">
+		<img src="images/cover/banner.png" class="title"/>
 
-	 <nav>     
-      <li><a href="showreel.html">SHOWREEL</a></li>
-      <li><a href="vfx.html">VFX</a></li>
-      <li><a href="photo.html">PHOTO</a></li>
-      <li><a href="blog.html">BLOG</li>
-      <li><a href="about.html" id="about-menu">ABOUT</a></li>
-      <li><a href="contact.html">CONTACT</a></li>       
-    </nav>
+		 <nav>
+	      <li><a href="home.html">HOME</a></li>     
+	      <li><a href="showreel.html">SHOWREEL</a></li>
+	      <li><a href="works.html">WORKS</a></li>
+	      <li><a href="photo.html">PHOTOGRAPHY</a></li>
+	      <li><a href="blog.html">BLOG</a></li>
+	      <li><a href="about.html">ABOUT</a></li>
+	      <li><a href="contact.html">CONTACT</a></li>       
+	     </nav>   
+	</div>
 
 <div class="container">
 
 	<div class="about">
 		
 			<img src="images/myself.jpg" style="width:335px; height:500px;" alt="Myself"/>
-	
-			<p>Dating back to 2010 during his second year in high school, Wenyu (Andy) Zhang set foot in the industry of visual effects. After becoming familiar with 2D graphics programs, he taught himself industrial-level 3D packages as well as compositing tools. Photography is also one of his hobbies where he can capture the impressive beauty of landscape and architecture. He graduated from <a href="http://en.cuc.edu.cn" target="_blank">Communication University of China</a> (CUC最牛逼) with a Bachelor Degree in Digital Media Arts and came to <a href="http://www.purdue.edu" target="_blank">Purdue University</a>  (Boiler Up!) to begin his master program. As a visual effects artist, he is always looking forward to creating something elegant and telling an impressive story.</p>			
-			<p><a href="files/AndyZhang_resume.pdf" target="_blank"><i>Resume</p>
-	</div>
+		
+			<div id="bio">	
+			<p>Dating back to 2010 during his second year in high school, Wenyu (Andy) Zhang began to set foot in the industry of visual effects. Having been intrigued by graphics design and video editting, he then taught himself industrial-level 3D animation packages as well as compositing tools. Photography is also one of his hobbies where he can capture the impressive beauty of landscape and architecture. He graduated from <a href="http://en.cuc.edu.cn" target="_blank">Communication University of China</a> with a major in Digital Media Arts. Later on, he came to <a href="http://www.purdue.edu" target="_blank">Purdue University</a> (Boiler Up!) to start a brand new journey in the field of computer graphics in the US. He believes that as an artist and technologist, creating something elegant and impressive is always his ultimate pursuit. </p>
+				
+				<div id="resume-icon">
+					<a href="files/Zhang2017_resume.pdf" target="_blank"><img src="images/pdf_icon.png"></a>
+				</div>
+				<div id="resume-link">
+					<a href="files/Zhang2017_resume.pdf" target="_blank">Download resume</a>
+				</div>
+			</div>
 </div>
 
 <footer>
