--- a/showreel.html
+++ b/showreel.html
@@ -2,36 +2,34 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-	<title>Andy Zhang | Portfolio</title>
-	<meta name"viewport" content="width=device-width, initial-scale=1" http-equiv="content-type" content="text/html; charset=utf-8" />
+	<title>Wenyu (Andy) Zhang | Portfolio</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1" http-equiv="content-type" content="text/html; charset=utf-8" />
     <link rel="shortcut icon" href="images/avatar.jpg" />
 	<link href="css/master.css" rel="stylesheet" type="text/css" />
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 
-<img src="images/banner.png" class="banner"/>
+	<div class="banner">
+		<img src="images/cover/banner.png" class="title"/>
 
-	 <nav>     
-      <li><a href="showreel.html" id="showreel-menu">SHOWREEL</a></li>
-      <li><a href="vfx.html">VFX</a></li>
-      <li><a href="photo.html">PHOTO</a></li>
-      <li><a href="blog.html">BLOG</li>
-      <li><a href="about.html">ABOUT</a></li>
-      <li><a href="contact.html">CONTACT</a></li>       
-    </nav>
+		 <nav>
+	      <li><a href="home.html">HOME</a></li>     
+	      <li><a href="showreel.html">SHOWREEL</a></li>
+	      <li><a href="works.html">WORKS</a></li>
+	      <li><a href="photo.html">PHOTOGRAPHY</a></li>
+	      <li><a href="blog.html">BLOG</a></li>
+	      <li><a href="about.html">ABOUT</a></li>
+	      <li><a href="contact.html">CONTACT</a></li>       
+	     </nav>   
+	</div>
 
 <div class="container">
 
-<div id="showreel">	
-
-		<iframe src="https://player.vimeo.com/video/210145177?title=0&byline=0&portrait=0" width="880" height="500" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>	
-
-	<div id="sheet">
-		<a href="files/Wenyu_2017Showreel_Shot Breakdown.pdf" target="_blank"><i>Shot Breakdown Sheet</i></a>
+	<div id="showreel">	
+		<iframe src="https://player.vimeo.com/video/210145177?title=0&byline=0&portrait=0" width="880" height="500" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>		
 	</div>
-</div>
-
+	
 </div>
 
 <footer>
