--- a/works.html
+++ b/works.html
@@ -3,11 +3,12 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 	<title>Wenyu (Andy) Zhang | Portfolio</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" http-equiv="content-type" content="text/html; charset=utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" http-equiv="content-type" content="text/html; charset=utf-8" />
     <link rel="shortcut icon" href="images/avatar.jpg" />
 	<link href="css/master.css" rel="stylesheet" type="text/css" />
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 </head>
+
 <body>
 
 	<div class="banner">
@@ -26,7 +27,11 @@
 
 <div class="container">
 
-
+	<div class="video-gallery">
+		<iframe src="https://player.vimeo.com/video/181273975?title=0&byline=0&portrait=0" width="750" height="430" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+		<iframe src="https://player.vimeo.com/video/153671854?title=0&byline=0&portrait=0" width="750" height="430" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+		<iframe src="https://player.vimeo.com/video/214308081?title=0&byline=0&portrait=0" width="750" height="430" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+	</div>
 
 </div>
 
