--- a/blog.html
+++ b/blog.html
@@ -2,8 +2,8 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-  <title>Andy Zhang | Portfolio</title>
-  <meta name"viewport" content="width=device-width, initial-scale=1" http-equiv="content-type" content="text/html; charset=utf-8" />
+  <title>Wenyu (Andy) Zhang | Portfolio</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" http-equiv="content-type" content="text/html; charset=utf-8" />
     <link rel="shortcut icon" href="images/avatar.jpg" />
   <link href="css/master.css" rel="stylesheet" type="text/css" />
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -11,16 +11,19 @@
 <body>
 
 
-  <img src="images/banner.png" class="banner"/>
+  <div class="banner">
+    <img src="images/cover/banner.png" class="title"/>
 
-     <nav>     
-      <li><a href="showreel.html">SHOWREEL</a></li>
-      <li><a href="vfx.html">VFX</a></li>
-      <li><a href="photo.html">PHOTO</a></li>
-      <li><a href="blog.html" id="blog-menu">BLOG</li>
-      <li><a href="about.html">ABOUT</a></li>
-      <li><a href="contact.html">CONTACT</a></li>       
-    </nav>
+     <nav>
+        <li><a href="home.html">HOME</a></li>     
+        <li><a href="showreel.html">SHOWREEL</a></li>
+        <li><a href="works.html">WORKS</a></li>
+        <li><a href="photo.html">PHOTOGRAPHY</a></li>
+        <li><a href="blog.html">BLOG</a></li>
+        <li><a href="about.html">ABOUT</a></li>
+        <li><a href="contact.html">CONTACT</a></li>       
+       </nav>   
+  </div>
 
 <div class="container">
 
