--- a/works.html
+++ b/works.html
@@ -7,6 +7,7 @@
     <link rel="shortcut icon" href="images/avatar.jpg" />
 	<link href="css/master.css" rel="stylesheet" type="text/css" />
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+		
 </head>
 
 <body>
@@ -14,7 +15,7 @@
 	<div class="banner">
 		<img src="images/cover/banner.png" class="title"/>
 
-		 <nav>
+		<nav>
 	      <li><a href="home.html">HOME</a></li>     
 	      <li><a href="showreel.html">SHOWREEL</a></li>
 	      <li><a href="works.html">WORKS</a></li>
@@ -22,18 +23,49 @@
 	      <li><a href="blog.html">BLOG</a></li>
 	      <li><a href="about.html">ABOUT</a></li>
 	      <li><a href="contact.html">CONTACT</a></li>       
-	     </nav>   
+	    </nav>   
 	</div>
 
+
+<!--	<div class="container">
+	  
+	  <div class="row">
+	    <div class="col-lg-6" style="background-color:yellow;">
+	      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<br>
+	      Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+	    </div>
+	    <div class="col-lg-6" style="background-color:pink;">
+	      Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
+	    </div>
+	  </div>
+	</div>
+
+-->
 <div class="container">
 
+	<div id="works_cover">
+		<a href="works_ho.html"><img src="images/works/work_ho.jpg" title="Smiley face"/></a>
+		<a href="works_sc.html"><img src="images/works/work_sc.jpg"></a>	
+		<a href="works_vg.html"><img src="images/works/work_vg.jpg"></a>	
+		<a href="works_au.html"><img src="images/works/work_au.jpg"></a>
+		<a href="works_lb.html"><img src="images/works/work_lb.jpg"></a>
+		<a href="works_hb.html"><img src="images/works/work_hb.jpg"></a>
+		<a href="works_hs.html"><img src="images/works/work_hs.jpg"></a>
+		<a href="works_ac.html"><img src="images/works/work_ac.jpg"></a>	
+		<a href="works_bt.html"><img src="images/works/work_bt.jpg"></a>	
+		<a href="works_ux.html"><img src="images/works/work_9.jpg"></a>
+	</div>
+
+</div>
+
+<!--	
 	<div class="video-gallery">
 		<iframe src="https://player.vimeo.com/video/181273975?title=0&byline=0&portrait=0" width="750" height="430" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 		<iframe src="https://player.vimeo.com/video/153671854?title=0&byline=0&portrait=0" width="750" height="430" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 		<iframe src="https://player.vimeo.com/video/214308081?title=0&byline=0&portrait=0" width="750" height="430" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 	</div>
-
 </div>
+-->
 
 <footer>
 	<p>&copy;2017 Wenyu Zhang | All Rights Reserved</p>
