--- a/works.html
+++ b/works.html
@@ -6,8 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1" http-equiv="content-type" content="text/html; charset=utf-8" />
     <link rel="shortcut icon" href="images/avatar.jpg" />
 	<link href="css/master.css" rel="stylesheet" type="text/css" />
-	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-		
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">		
 </head>
 
 <body>
@@ -43,17 +42,41 @@
 -->
 <div class="container">
 
-	<div id="works_cover">
-		<a href="works_ho.html"><img src="images/works/work_ho.jpg" title="Smiley face"/></a>
-		<a href="works_sc.html"><img src="images/works/work_sc.jpg"></a>	
-		<a href="works_vg.html"><img src="images/works/work_vg.jpg"></a>	
-		<a href="works_au.html"><img src="images/works/work_au.jpg"></a>
-		<a href="works_lb.html"><img src="images/works/work_lb.jpg"></a>
-		<a href="works_hb.html"><img src="images/works/work_hb.jpg"></a>
-		<a href="works_hs.html"><img src="images/works/work_hs.jpg"></a>
-		<a href="works_ac.html"><img src="images/works/work_ac.jpg"></a>	
-		<a href="works_bt.html"><img src="images/works/work_bt.jpg"></a>	
-		<a href="works_ux.html"><img src="images/works/work_9.jpg"></a>
+	<div class="works-cover">
+
+		<div class="works-title-cover">
+			<a href="works_ho.html"><img src="images/works/work_ho.jpg"/>
+			<div class="works-title"><p>Holocene</p></div></a>
+		</div>
+		<div class="works-title-cover">
+			<a href="works_vg.html"><img src="images/works/work_vg.jpg"/>
+			<div class="works-title"><p>VIRTUAL GAME</p></div></a>
+		</div>
+		<div class="works-title-cover">
+			<a href="works_au.html"><img src="images/works/work_au.jpg"/>
+			<div class="works-title"><p>Audi R8</p></div></a>
+		</div>
+		<div class="works-title-cover">
+			<a href="works_lb.html"><img src="images/works/work_lb.jpg"/>
+			<div class="works-title"><p>Lauberk</p></div></a>
+		</div>
+		<div class="works-title-cover">
+			<a href="works_hb.html"><img src="images/works/work_hb.jpg"/>
+			<div class="works-title"><p>H&B</p></div></a>
+		</div>
+		<div class="works-title-cover">
+			<a href="works_hs.html"><img src="images/works/work_hs.jpg"/>
+			<div class="works-title"><p>Motion</p></div></a>
+		</div>
+		<div class="works-title-cover">
+			<a href="works_ac.html"><img src="images/works/work_ac.jpg"/>
+			<div class="works-title"><p>AC</p></div></a>
+		</div>
+		<div class="works-title-cover">
+			<a href="works_bt.html"><img src="images/works/work_bt.jpg"/>
+			<div class="works-title"><p>BT</p></div></a>
+		</div>
+		
 	</div>
 
 </div>
