--- a/works.html
+++ b/works.html
@@ -54,27 +54,27 @@
 		</div>
 		<div class="works-title-cover">
 			<a href="works_au.html"><img src="images/works/work_au.jpg"/>
-			<div class="works-title"><p>Audi R8</p></div></a>
+			<div class="works-title"><p>Audi R8 Compositing</p></div></a>
 		</div>
 		<div class="works-title-cover">
 			<a href="works_lb.html"><img src="images/works/work_lb.jpg"/>
-			<div class="works-title"><p>Lauberk</p></div></a>
+			<div class="works-title"><p>C4D + Laubwerk</p></div></a>
 		</div>
 		<div class="works-title-cover">
 			<a href="works_hb.html"><img src="images/works/work_hb.jpg"/>
-			<div class="works-title"><p>H&B</p></div></a>
+			<div class="works-title"><p>Heart & Brain</p></div></a>
 		</div>
 		<div class="works-title-cover">
 			<a href="works_hs.html"><img src="images/works/work_hs.jpg"/>
-			<div class="works-title"><p>Motion</p></div></a>
+			<div class="works-title"><p>MoGraphic Background</p></div></a>
 		</div>
 		<div class="works-title-cover">
 			<a href="works_ac.html"><img src="images/works/work_ac.jpg"/>
-			<div class="works-title"><p>AC</p></div></a>
+			<div class="works-title"><p>ACROPHOBIA</p></div></a>
 		</div>
 		<div class="works-title-cover">
 			<a href="works_bt.html"><img src="images/works/work_bt.jpg"/>
-			<div class="works-title"><p>BT</p></div></a>
+			<div class="works-title"><p>Compositing Shot Test</p></div></a>
 		</div>
 		
 	</div>
