--- a/works_ho.html
+++ b/works_ho.html
@@ -28,8 +28,10 @@
 <div class="container">
 
   <div class="works-container">
- 
-  <p>Working in progress ...</p>
+    <br>
+    <img src="images/works/ho/forest_v11.png" width="900px">
+    <p>Holocene is a personal project I've been working on. It is an automobile commercial with a scene of coastal highway as well as forest. The performance of the car is just like a wolf...</p>
+    <p>Working in progress ...</p>
   
   </div>
 
