--- a/works.html
+++ b/works.html
@@ -46,7 +46,7 @@
 
 		<div class="works-title-cover">
 			<a href="works_ho.html"><img src="images/works/work_ho.jpg"/>
-			<div class="works-title"><p>Holocene</p></div></a>
+			<div class="works-title"><p>Holocene<br/><br/>(WIP)</p></div></a>
 		</div>
 		<div class="works-title-cover">
 			<a href="works_vg.html"><img src="images/works/work_vg.jpg"/>
@@ -58,7 +58,7 @@
 		</div>
 		<div class="works-title-cover">
 			<a href="works_lb.html"><img src="images/works/work_lb.jpg"/>
-			<div class="works-title"><p>C4D + Laubwerk</p></div></a>
+			<div class="works-title"><p>Laubwerk Plant Kit Test</p></div></a>
 		</div>
 		<div class="works-title-cover">
 			<a href="works_hb.html"><img src="images/works/work_hb.jpg"/>
