--- a/works_ho.html
+++ b/works_ho.html
@@ -31,7 +31,7 @@
     <br>
     <img src="images/works/ho/forest_v11.png" width="900px">
     <p>Holocene is a personal project I've been working on. It is an automobile commercial with a scene of coastal highway as well as forest. The performance of the car is just like a wolf...</p>
-    <p>Working in progress ...</p>
+    <p>The image was created by Maya and Speedtree. Rendered in V-Ray. Working in progress ...</p>
   
   </div>
 
