--- a/home.html
+++ b/home.html
@@ -27,8 +27,12 @@
 
 <div class="container">
 
-
-</div>
+	<div id="home-img">
+		<div class="home-title-cover">
+			<a href="works_ho.html"><img src="images/works/ho/ho_01.jpg"/>
+			<div class="works-title"><p>Holocene<br/><br/>( WIP )</p></div></a>
+		</div>
+	</div>
 
 </div>
 
