--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 	<title>Wenyu Zhang | Portfolio</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" http-equiv="content-type" content="text/html; charset=utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" http-equiv="content-type" content="text/html; charset=utf-8" />
     <link rel="shortcut icon" href="images/avatar.jpg" />
 	<link href="css/master.css" rel="stylesheet" type="text/css" />
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -23,10 +23,16 @@
 	      <li><a href="contact.html">CONTACT</a></li>       
 	     </nav>   
 	</div>
+	
 
 <div class="container">
 
-
+	<div id="home-img">
+		<div class="home-title-cover">
+			<a href="works_ho.html"><img src="images/works/ho/ho_01.jpg"/>
+			<div class="works-title"><p>Holocene<br/><br/>( WIP )</p></div></a>
+		</div>
+	</div>
 
 </div>
 
