--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 	<div id="home-img">
 		<div class="home-title-cover">
-			<a href="works_ho.html"><img src="images/works/ho/ho_01.jpg"/>
+			<a href="works_ho.html"><img src="images/works/ho/ho_03.jpg" width="1000px" />
 			<div class="works-title"><p>Holocene<br/><br/>( WIP )</p></div></a>
 		</div>
 	</div>
