--- a/works.html
+++ b/works.html
@@ -49,6 +49,10 @@
 			<div class="works-title"><p>Holocene<br/><br/>(WIP)</p></div></a>
 		</div>
 		<div class="works-title-cover">
+			<a href="works_ms.html"><img src="images/works/work_ms.jpg"/>
+			<div class="works-title"><p>Make Some Noise</p></div></a>
+		</div>
+		<div class="works-title-cover">
 			<a href="works_vg.html"><img src="images/works/work_vg.jpg"/>
 			<div class="works-title"><p>VIRTUAL GAME</p></div></a>
 		</div>
