--- a/works_ms.html
+++ b/works_ms.html
@@ -31,7 +31,7 @@
     <iframe src="https://player.vimeo.com/video/252636058?title=0&byline=0&portrait=0" width="900" height="507" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
     <br><br>
     <p>A small Perlin Noise visualization program written by C++, OpenGL, GLSL and Imgui.</p>
-    <p>Source code: https://github.com/zhan2586/Perlin-Noise-Visualization</p>
+    <p><a href="https://github.com/zhan2586/Perlin-Noise-Visualization">Source code</a></p>
   
   </div>
 
