--- a/about.html
+++ b/about.html
@@ -34,10 +34,10 @@
 			<p>Dating back to 2010 during his second year in high school, Wenyu (Andy) Zhang began to set foot in the industry of visual effects. Having been intrigued by graphics design and video editting, he then taught himself industrial-level 3D animation packages as well as compositing tools. Photography is also one of his hobbies where he can capture the impressive beauty of landscape and architecture. He graduated from <a href="http://en.cuc.edu.cn" target="_blank">Communication University of China</a> with a major in Digital Media Arts. Later on, he came to <a href="http://www.purdue.edu" target="_blank">Purdue University</a> (Boiler Up!) to start a brand new journey in the field of computer graphics in the US. He believes that as an artist and technologist, creating something elegant and impressive is always his ultimate pursuit. </p>
 				
 			<div id="resume-icon">
-				<a href="files/Zhang,W_resume.pdf" target="_blank"><img src="images/pdf_icon.png"></a>
+				<a href="files/Zhang,W Resume.pdf" target="_blank"><img src="images/pdf_icon.png"></a>
 			</div>
 			<div id="resume-link">
-				<a href="files/Zhang,W_resume.pdf" target="_blank">Download resume</a>
+				<a href="files/Zhang,W Resume.pdf" target="_blank">Download resume</a>
 			</div>
 		</div>
 	</div>
