--- a/home.html
+++ b/home.html
@@ -2,48 +2,46 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-	<title>Wenyu Zhang | Portfolio</title>
+	<title>Weny&uuml Zhang | Portfolio</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1" http-equiv="content-type" content="text/html; charset=utf-8" />
     <link rel="shortcut icon" href="images/avatar.jpg" />
 	<link href="css/master.css" rel="stylesheet" type="text/css" />
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 </head>
+
 <body>
 
 	<div class="banner">
-		<img src="images/cover/banner.png" class="title"/>
+		<img src="images/banner/banner_new.png" class="title"/>
 
-		 <nav>
+		<nav>
 	      <li><a href="home.html">HOME</a></li>     
-	      <li><a href="showreel.html">SHOWREEL</a></li>
-	      <li><a href="works.html">WORKS</a></li>
+	      <li><a href="art.html">ART</a></li>
+	      <li><a href="programming.html">PROGRAMMING</a></li>
+	      <li><a href="design.html">DESIGN</a></li>
 	      <li><a href="photo.html">PHOTOGRAPHY</a></li>
-	      <li><a href="blog.html">BLOG</a></li>
 	      <li><a href="about.html">ABOUT</a></li>
 	      <li><a href="contact.html">CONTACT</a></li>       
-	     </nav>   
+		</nav>   
 	</div>
 	
 
 <div class="container">
 
-	<div id="home-img">
-		<div class="home-title-cover">
-			<a href="works_ho.html"><img src="images/works/ho/ho_03.jpg" width="1000px"/>
-			<div class="works-title"><p>Holocene<br/><br/>( WIP )</p></div></a>
-		</div>
+	<div id="showreel">	
+		<iframe src="https://player.vimeo.com/video/210145177?title=0&byline=0&portrait=0"        width="880" height="500" frameborder="0" webkitallowfullscreen mozallowfullscreen        allowfullscreen></iframe>		
 	</div>
 
 </div>
 
 <footer>
-	<p>&copy;2017 Wenyu Zhang | All Rights Reserved</p>
+	<p>&copy;2018 Weny&uuml Zhang | All Rights Reserved</p>
 	
 	<div class="icons">
 		<a href="https://www.facebook.com/lawrence.zhang.52" class="fa fa-facebook" target="_blank"></a>
 		<a href="https://twitter.com/zhangvisual" class="fa fa-twitter" target="_blank"></a>
 		<a href="https://vimeo.com/zhangvisual" class="fa fa-vimeo" target="_blank"></a>
-		<a href="https://www.linkedin.com/in/wenyu-zhang-762a35b7/" class="fa fa-linkedin" target="_blank"></a>
+		<a href="https://www.linkedin.com/in/zhangvisual/" class="fa fa-linkedin" target="_blank"></a>
 		<a href="http://www.instagram.com/zhangvisual" class="fa fa-instagram" target="_blank"></a>
 		<a href="http://500px.com/zhangvisual" class="fa fa-500px" target="_blank"></a>
 		<a href="http://weibo.com/2775542052" class="fa fa-weibo" target="_blank"></a>
