--- a/works_ho.html
+++ b/works_ho.html
@@ -12,17 +12,16 @@
 
 
   <div class="banner">
-    <img src="images/cover/banner.png" class="title"/>
-
-     <nav>
-        <li><a href="home.html">HOME</a></li>     
-        <li><a href="showreel.html">SHOWREEL</a></li>
-        <li><a href="works.html">WORKS</a></li>
-        <li><a href="photo.html">PHOTOGRAPHY</a></li>
-        <li><a href="blog.html">BLOG</a></li>
-        <li><a href="about.html">ABOUT</a></li>
-        <li><a href="contact.html">CONTACT</a></li>       
-       </nav>   
+    <img src="images/banner/banner_new.png" class="title"/>
+    <nav>
+	      <li><a href="home.html">HOME</a></li>     
+	      <li><a href="art.html">ART</a></li>
+	      <li><a href="programming.html">PROGRAMMING</a></li>
+	      <li><a href="design.html">DESIGN</a></li>
+	      <li><a href="photo.html">PHOTOGRAPHY</a></li>
+	      <li><a href="about.html">ABOUT</a></li>
+	      <li><a href="contact.html">CONTACT</a></li>       
+		</nav>     
   </div>
 
 <div class="container">
@@ -42,12 +41,12 @@
 </div>
 
 <footer>
-  <p>&copy;2017 Wenyu Zhang | All Rights Reserved</p>
+  <p>&copy;2018 Wenyu Zhang | All Rights Reserved</p>
   <div class="icons">
     <a href="https://www.facebook.com/lawrence.zhang.52" class="fa fa-facebook" target="_blank"></a>
     <a href="https://twitter.com/zhangvisual" class="fa fa-twitter" target="_blank"></a>
     <a href="https://vimeo.com/zhangvisual" class="fa fa-vimeo" target="_blank"></a>
-    <a href="https://www.linkedin.com/in/wenyu-zhang-762a35b7/" class="fa fa-linkedin" target="_blank"></a>
+    <a href="https://www.linkedin.com/in/zhangvisual/" class="fa fa-linkedin" target="_blank"></a>
     <a href="http://www.instagram.com/zhangvisual" class="fa fa-instagram" target="_blank"></a>
     <a href="http://500px.com/zhangvisual" class="fa fa-500px" target="_blank"></a>
     <a href="http://weibo.com/2775542052" class="fa fa-weibo" target="_blank"></a>
