--- a/about.html
+++ b/about.html
@@ -2,42 +2,43 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-	<title>Wenyu Zhang | Portfolio</title>
+	<title>Weny&uuml Zhang | Portfolio</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1" http-equiv="content-type" content="text/html; charset=utf-8" />
     <link rel="shortcut icon" href="images/avatar.jpg" />
 	<link href="css/master.css" rel="stylesheet" type="text/css" />
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 </head>
+
 <body>
 
 	<div class="banner">
-		<img src="images/cover/banner.png" class="title"/>
+		<img src="images/banner/banner_new.png" class="title"/>
 
-		 <nav>
+		<nav>
 	      <li><a href="home.html">HOME</a></li>     
-	      <li><a href="showreel.html">SHOWREEL</a></li>
-	      <li><a href="works.html">WORKS</a></li>
+	      <li><a href="art.html">ART</a></li>
+	      <li><a href="programming.html">PROGRAMMING</a></li>
+	      <li><a href="design.html">DESIGN</a></li>
 	      <li><a href="photo.html">PHOTOGRAPHY</a></li>
-	      <li><a href="blog.html">BLOG</a></li>
 	      <li><a href="about.html">ABOUT</a></li>
 	      <li><a href="contact.html">CONTACT</a></li>       
-	     </nav>   
+		</nav>   
 	</div>
 
 <div class="container">
 
 	<div class="about">
 		
-		<img src="images/myself.jpg" style="width:335px; height:500px;" alt="Myself"/>
+		<img src="images\about\myself.jpg" style="width:230px; height:335px;" alt="Myself"/>
 		
 		<div id="bio">	
-			<p>Dating back to 2010 during his second year in high school, Wenyu (Andy) Zhang began to set foot in the industry of visual effects. Having been intrigued by graphics design and video editting, he then taught himself industry-level 3D animation packages as well as compositing tools. Photography is also one of his hobbies where he can capture the impressive beauty of landscape and architecture. He graduated from <a href="http://en.cuc.edu.cn" target="_blank">Communication University of China</a> with a major in Digital Media Arts. Later on, he came to <a href="http://www.purdue.edu" target="_blank">Purdue University</a> (Boiler Up!) to start a brand new journey in the field of computer graphics in the US. He believes that as an artist and technologist, creating something elegant and impressive is always his ultimate pursuit. </p>
+			<p>Dating back to 2010 during his second year in high school, Weny&uuml Zhang began to set foot in the industry of visual effects. Having been intrigued by graphics design and video editting, he then taught himself industry-level 3D animation packages as well as compositing tools. Photography is also one of his hobbies where he can capture the impressive beauty of landscape and architecture. He graduated from <a href="http://en.cuc.edu.cn" target="_blank">Communication University of China</a> with a major in Digital Media Arts. Later on, he came to <a href="http://www.purdue.edu" target="_blank">Purdue University</a> (Boiler Up!) to start a brand new journey in the field of computer graphics in the US. He believes that as an artist and technologist, creating something elegant and impressive is always his ultimate pursuit. </p>
 				
 			<div id="resume-icon">
-				<a href="files/Zhang,W_Resume.pdf" target="_blank"><img src="images/pdf_icon.png"></a>
+				<img src="images/about/pdf_icon.png" width="30" height="30" alt="PDF"/>
 			</div>
 			<div id="resume-link">
-				<a href="files/Zhang,W_Resume.pdf" target="_blank">Download resume</a>
+				<a href="files/Zhang,W_Resume.pdf" target="_blank">Resume</a>
 			</div>
 		</div>
 	</div>
@@ -45,12 +46,12 @@
 </div>
 
 <footer>
-	<p>&copy;2017 Wenyu Zhang | All Rights Reserved</p>
+	<p>&copy;2018 Wenyu Zhang | All Rights Reserved</p>
 	<div class="icons">
 		<a href="https://www.facebook.com/lawrence.zhang.52" class="fa fa-facebook" target="_blank"></a>
 		<a href="https://twitter.com/zhangvisual" class="fa fa-twitter" target="_blank"></a>
 		<a href="https://vimeo.com/zhangvisual" class="fa fa-vimeo" target="_blank"></a>
-		<a href="https://www.linkedin.com/in/wenyu-zhang-762a35b7/" class="fa fa-linkedin" target="_blank"></a>
+		<a href="https://www.linkedin.com/in/zhangvisual/" class="fa fa-linkedin" target="_blank"></a>
 		<a href="http://www.instagram.com/zhangvisual" class="fa fa-instagram" target="_blank"></a>
 		<a href="http://500px.com/zhangvisual" class="fa fa-500px" target="_blank"></a>
 		<a href="http://weibo.com/2775542052" class="fa fa-weibo" target="_blank"></a>
