--- a/design.html
+++ b/design.html
@@ -36,20 +36,14 @@
 			<a href="works_pr.html"><img src="images/works/work_pr.jpg"/>
 			<div class="works-title"><p>Proxemics Research</p></div></a>
 		</div>
-		<!--
         <div class="works-title-cover">
-			<a href="works_hb.html"><img src="images/works/work_hb.jpg"/>
-			<div class="works-title"><p>Infographics Design</p></div></a>
-		</div>
-        <div class="works-title-cover">
-			<a href="works_hb.html"><img src="images/works/work_hb.jpg"/>
+			<a href="works_ui.html"><img src="images/works/work_ui.jpg"/>
 			<div class="works-title"><p>App UI Design</p></div></a>
-		</div>
+		</div>        
         <div class="works-title-cover">
-			<a href="design.html"><img src="images/works/work_hb.jpg"/>
+			<a href="design.html"><img src="images\works\blank.png" />
 			<div class="works-title"><p>This Website :)</p></div></a>
-		</div>
-        -->	
+		</div>       
 	</div>
 
 </div>
