--- a/files/bootstrap_test.html
+++ b/files/bootstrap_test.html
@@ -53,7 +53,7 @@ e.onmouseout = function() {
 	      <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
 	    </div>   
 	  </div>
-	</div><br>
+	</div><br/>
 
 	<div class="container bg-3 text-center">    
 	  <div class="row">
