--- a/works_au.html
+++ b/works_au.html
@@ -2,39 +2,41 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-  <title>Weny&uuml Zhang | Portfolio</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" http-equiv="content-type" content="text/html; charset=utf-8" />
-  <link rel="shortcut icon" href="images/avatar.jpg" />
-  <link href="css/master.css" rel="stylesheet" type="text/css" />
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+	<title>Weny&uuml Zhang | Portfolio</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1" http-equiv="content-type" content="text/html; charset=utf-8" />
+	<link rel="shortcut icon" href="images/avatar.jpg" />
+	<link href="css/master.css" rel="stylesheet" type="text/css" />
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 </head>
+
 <body>
 
-
-  <div class="banner">
-    <img src="images/banner/banner_new.png" class="title"/><nav>
-	      <li><a href="home.html">HOME</a></li>     
-	      <li><a href="art.html">ART</a></li>
-	      <li><a href="programming.html">PROGRAMMING</a></li>
-	      <li><a href="design.html">DESIGN</a></li>
-	      <li><a href="photo.html">PHOTOGRAPHY</a></li>
-	      <li><a href="about.html">ABOUT</a></li>
-	      <li><a href="contact.html">CONTACT</a></li>       
-		</nav>   </div>
+<div class="banner">
+	<img src="images\banner\banner_new.png" class="title"/>
+    <nav>
+        <li><a href="home.html">HOME</a></li>     
+        <li><a href="art.html">ART</a></li>
+        <li><a href="programming.html">PROGRAMMING</a></li>
+        <li><a href="design.html">DESIGN</a></li>
+        <li><a href="photo.html">PHOTOGRAPHY</a></li>
+        <li><a href="about.html">ABOUT</a></li>
+        <li><a href="contact.html">CONTACT</a></li>       
+	</nav>   
+</div>
 
 <div class="container">
 
-  <div class="works-container">
-    <iframe src="https://player.vimeo.com/video/214308081?title=0&byline=0&portrait=0" width="900" height="507" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>    
-    <div id="au-img">
-       <img src="images/works/au/au_01.jpg">
-       <img src="images/works/au/au_02.jpg">
-       <img src="images/works/au/au_03.jpg">
-    </div>
-    <br><br>
-    <p>I learned how to model an Audi R8 in Maya. I used V-Ray for texture and render. Background was made by camera projection in Maya.</p>
-    
-  </div>
+	<div class="works-container">
+    	<iframe src="https://player.vimeo.com/video/214308081?title=0&byline=0&portrait=0" width="900" height="506" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>    
+        <div id="au-img">
+           <img src="images/works/au/au_01.jpg">
+           <img src="images/works/au/au_02.jpg">
+           <img src="images/works/au/au_03.jpg">
+           <img src="images/works/au/au_04.jpg">
+        </div>
+    	<br><br>
+    	<p>I learned how to model an Audi R8 in Maya. I used V-Ray for texture and render. Background was made by camera projection in Maya. Also tried Autodesk VRED for real-time visualization.</p>    
+   </div>
 
 </div>
 
