--- a/works_ho.html
+++ b/works_ho.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html PUBLIC "-//w3c//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
 <html xmlns="http://www.w3.org/1999/xhtml">
+
 <head>
-  <title>Wenyu Zhang | Portfolio</title>
+  <title>Weny&uuml Zhang | Portfolio</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" http-equiv="content-type" content="text/html; charset=utf-8" />
   <link rel="shortcut icon" href="images/avatar.jpg" />
   <link href="css/master.css" rel="stylesheet" type="text/css" />
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 </head>
+
 <body>
 
-
-  <div class="banner">
-    <img src="images/banner/banner_new.png" class="title"/>
+<div class="banner">
+	<img src="images/banner/banner_new.png" class="title"/>
     <nav>
 	      <li><a href="home.html">HOME</a></li>     
 	      <li><a href="art.html">ART</a></li>
@@ -21,22 +22,19 @@
 	      <li><a href="photo.html">PHOTOGRAPHY</a></li>
 	      <li><a href="about.html">ABOUT</a></li>
 	      <li><a href="contact.html">CONTACT</a></li>       
-		</nav>     
-  </div>
+	</nav>     
+</div>
 
 <div class="container">
 
-  <div class="works-container">
-    <br>
-    <img src="images/works/ho/ho_03.jpg" width="900px">
-    <img src="images/works/ho/ho_01.jpg" width="900px">
-    <img src="images/works/ho/ho_02.png" width="900px">
-
+	<div class="works-container">  
+    	<img src="images/works/ho/ho_03.jpg" width="900px">
+    	<img src="images/works/ho/ho_01.jpg" width="900px">
+    	<img src="images/works/ho/ho_02.png" width="900px">
+	<br/><br/>
     <p>Holocene is a personal project I've been working on. It is an automobile commercial with a scene of coastal highway as well as forest. The performance of the car is just like a wolf...</p>
     <p>The programs I used included Maya, Maya Bifrost, Houdini Ocean Toolkit and Speedtree. Rendered in V-Ray. Working in progress ...</p>
-  
-  </div>
-
+  	</div>
 
 </div>
 
