--- a/works_lb.html
+++ b/works_lb.html
@@ -2,7 +2,7 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-  <title>Wenyu Zhang | Portfolio</title>
+  <title>Weny&uuml Zhang | Portfolio</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" http-equiv="content-type" content="text/html; charset=utf-8" />
   <link rel="shortcut icon" href="images/avatar.jpg" />
   <link href="css/master.css" rel="stylesheet" type="text/css" />
@@ -10,30 +10,30 @@
 </head>
 <body>
 
-
-  <div class="banner">
-    <img src="images/banner/banner_new.png" class="title"/><nav>
-	      <li><a href="home.html">HOME</a></li>     
-	      <li><a href="art.html">ART</a></li>
-	      <li><a href="programming.html">PROGRAMMING</a></li>
-	      <li><a href="design.html">DESIGN</a></li>
-	      <li><a href="photo.html">PHOTOGRAPHY</a></li>
-	      <li><a href="about.html">ABOUT</a></li>
-	      <li><a href="contact.html">CONTACT</a></li>       
-		</nav>   </div>
+<div class="banner">
+    <img src="images/banner/banner_new.png" class="title"/>
+    <nav>
+ 		<li><a href="home.html">HOME</a></li>     
+	    <li><a href="art.html">ART</a></li>
+	    <li><a href="programming.html">PROGRAMMING</a></li>
+	    <li><a href="design.html">DESIGN</a></li>
+	    <li><a href="photo.html">PHOTOGRAPHY</a></li>
+	    <li><a href="about.html">ABOUT</a></li>
+	    <li><a href="contact.html">CONTACT</a></li>       
+	</nav>   
+</div>
 
 <div class="container">
 
-  <div class="works-container">
-  <div id="lb-img">
-     <img src="images/works/lb/lb_01.jpg">
-     <img src="images/works/lb/lb_02.jpg">
-     <img src="images/works/lb/lb_03.jpg">
-     <img src="images/works/lb/lb_04.jpg">     
-  </div>
-  <p>I made this forest environment with Cinema 4D plus the plugin Laubwerk Plants Kits. The haze effect made by physical renderer in Cinema 4D feels pretty good.</p>  
-  
-  </div>
+	<div class="works-container">
+		<div id="lb-img">
+            <img src="images/works/lb/lb_01.jpg">
+            <img src="images/works/lb/lb_02.jpg">
+            <img src="images/works/lb/lb_03.jpg">
+            <img src="images/works/lb/lb_04.jpg">     
+    </div>
+    <p>I made this forest environment with Cinema 4D plus the plugin Laubwerk Plants Kits. The haze effect made by physical renderer in Cinema 4D feels pretty good.</p>   
+</div>
 
 </div>
 
