--- a/works_ms.html
+++ b/works_ms.html
@@ -2,19 +2,18 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-  <title>Wenyu Zhang | Portfolio</title>
+  <title>Weny&uuml Zhang | Portfolio</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" http-equiv="content-type" content="text/html; charset=utf-8" />
   <link rel="shortcut icon" href="images/avatar.jpg" />
   <link href="css/master.css" rel="stylesheet" type="text/css" />
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 </head>
+
 <body>
 
-
-  <div class="banner">
-    <img src="images/cover/banner.png" class="title"/>
-
-    <<nav>
+<div class="banner">
+    <a href="http://www.wenyuzhang.com/"><img src="images\banner\banner_new.png" class="title"/></a>
+    <nav>
 	      <li><a href="home.html">HOME</a></li>     
 	      <li><a href="art.html">ART</a></li>
 	      <li><a href="programming.html">PROGRAMMING</a></li>
@@ -22,19 +21,19 @@
 	      <li><a href="photo.html">PHOTOGRAPHY</a></li>
 	      <li><a href="about.html">ABOUT</a></li>
 	      <li><a href="contact.html">CONTACT</a></li>       
-		</nav>   
-  </div>
+	</nav>   
+</div>
 
 <div class="container">
 
-  <div class="works-container">
-    <iframe src="https://player.vimeo.com/video/252636058?title=0&byline=0&portrait=0" width="900" height="507" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-    <br><br>
+	<div class="works-container">
+    
+    <iframe src="https://player.vimeo.com/video/252636058?title=0&byline=0&portrait=0" width="900" height="506" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+    <br/><br/>
     <p>A small Perlin Noise visualization program written by C++, OpenGL, GLSL and Imgui.</p>
     <p><a href="https://github.com/zhan2586/Perlin-Noise-Visualization">Source code</a></p>
   
   </div>
-
 
 </div>
 
