--- a/works_pr.html
+++ b/works_pr.html
@@ -2,7 +2,7 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-  <title>Wenyu Zhang | Portfolio</title>
+  <title>Weny&uuml Zhang | Portfolio</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" http-equiv="content-type" content="text/html; charset=utf-8" />
   <link rel="shortcut icon" href="images/avatar.jpg" />
   <link href="css/master.css" rel="stylesheet" type="text/css" />
@@ -29,7 +29,7 @@
     
     <iframe src="https://player.vimeo.com/video/191842243?title=0&byline=0&portrait=0" width="900" height="507" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>    
     <p>Every person holds a mobile territory unconsciously is called personal space. We did a research about finding different distance and individual feedback for participants in a VR world.</p>
-	<p><a href="https://docs.google.com/presentation/d/18QT1OIuNk24Te1tAUdxONOWNMRN_3KhwmxDCYWdSa5A/edit#slide=id.g19ad9531e2_0_240">Presentation document</a></p>
+	<p><a href="https://docs.google.com/presentation/d/18QT1OIuNk24Te1tAUdxONOWNMRN_3KhwmxDCYWdSa5A/edit#slide=id.g35f391192_00">Presentation document</a></p>
      
   </div>
 
