--- a/works_ui.html
+++ b/works_ui.html
@@ -11,29 +11,38 @@
 <body>
 
 
-  <div class="banner">
-    <img src="images/banner/banner_new.png" class="title"/><nav>
-	      <li><a href="home.html">HOME</a></li>     
-	      <li><a href="art.html">ART</a></li>
-	      <li><a href="programming.html">PROGRAMMING</a></li>
-	      <li><a href="design.html">DESIGN</a></li>
-	      <li><a href="photo.html">PHOTOGRAPHY</a></li>
-	      <li><a href="about.html">ABOUT</a></li>
-	      <li><a href="contact.html">CONTACT</a></li>       
-		</nav>   </div>
+<div class="banner">
+  	<img src="images/banner/banner_new.png" class="title"/>
+    <nav>
+    	<li><a href="home.html">HOME</a></li>     
+	    <li><a href="art.html">ART</a></li>
+	    <li><a href="programming.html">PROGRAMMING</a></li>
+	    <li><a href="design.html">DESIGN</a></li>
+	    <li><a href="photo.html">PHOTOGRAPHY</a></li>
+	    <li><a href="about.html">ABOUT</a></li>
+	    <li><a href="contact.html">CONTACT</a></li>       
+	</nav>   
+</div>
 
 <div class="container">
 
-  <div class="works-container">
-    <iframe src="https://player.vimeo.com/video/150784491?title=0&byline=0&portrait=0" width="900" height="507" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-    <br><br>
-    <p>This is a CG shot composited by me. We shot the footage in a green-screen studio and replaced it with a museum environment. Because I'm pursuing a fastest method to accomplish this shot, I used the BG image directly and made it slide as the dolly shot.</p>
-    <br><br>
-    <p>Breakdown video: </p>  
-    <iframe src="https://player.vimeo.com/video/151297911?title=0&byline=0&portrait=0" width="900" height="507" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-    
+	<div class="works-container">
+		<div id="mobile-app-img">
+			<img src="images\works\ui\ui_01.PNG"/>
+			<img src="images\works\ui\ui_03.PNG"/>
+			<img src="images\works\ui\ui_04.PNG"/>
+			<img src="images\works\ui\ui_05.PNG"/>
+			<img src="images\works\ui\ui_06.PNG"/>
+			<img src="images\works\ui\ui_07.PNG"/>
+			<img src="images\works\ui\ui_08.PNG"/>
+			<img src="images\works\ui\ui_09.PNG"/>
+		</div>
+        <p>My mobile app design is about an alarm product for private coach. It integrates alarms with personal schedule, which is useful for a fitness coach to manage his time and students information. Design document can be found <a href="files\Wenyu_App_Design.pdf" target="_blank">here</a>.</p>    
+	</div>
+	
+   
+  
   </div>
-
 
 </div>
 
